display height and make height editable. https://app.asana.com/0/28209080808036/31773296146046

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -49,6 +49,7 @@ template(name='userDetails')
         li <strong>Location:</strong> #{ location }
         li <strong>Age:</strong> #{ age }
         li <strong>Email:</strong> #{ email }
+        li <strong>Height (cm):</strong> #{ height }
         li <strong>Birthday:</strong> #{ birthday }
         li <strong>Timezone:</strong> #{ timezone }
         li <strong>Next candidate refresh:</strong> #{ nextRefreshTimestamp }
