server endpoints for handling device connect, registration, location

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -91,6 +91,8 @@ template(name='userDetails')
           li Push Token: #{ pushToken }
           li APN Env: #{ apnEnvironment }
           li App ID: #{ appId }
+          li Build: #{ build }
+          li Version: #{ version }
           li
             button.remove-device Remove Device
       #push-token
