enhancements to device handling.
1) display location info on user details page
2) allow location/push/connectDevice to come out of order. If the messages come out of order, then register it to the session.

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -89,9 +89,12 @@ template(name='userDetails')
         +each devices
           li Id: #{ _id }
           li Push Token: #{ pushToken }
-          li APN Env: #{ apnEnvironment }
+          li APN Env: #{ apsEnv }
           li App ID: #{ appId }
           li Build: #{ build }
+          li Latitude: #{ lat }
+          li Longitude: #{ long }
+          li Timestamp: #{ timestamp }
           li Version: #{ version }
           li
             button.remove-device Remove Device
