e2e of editable settings screen. Need to refactor later.

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -51,6 +51,7 @@ template(name='userDetails')
         li <strong>Email:</strong> #{ email }
         li <strong>Height (cm):</strong> #{ height }
         li <strong>Birthday:</strong> #{ birthday }
+        li <strong>Gender Preference:</strong> #{ genderPref }
         li <strong>Timezone:</strong> #{ timezone }
         li <strong>Next candidate refresh:</strong> #{ nextRefreshTimestamp }
         li <strong>Created At:</strong> #{ createdAt }
