prompt texts when users first connect.
Both users' prompts are removed once a user sends a message.

--- a/client/connection_details/connection_details.jade
+++ b/client/connection_details/connection_details.jade
@@ -12,6 +12,8 @@ template(name='connectionUserActions')
     li Last Sent Message Date: #{ lastSentDate }
     li Last Seen Message: #{ lastMessageTextSeen }
     li Has Unread Message: #{ hasUnreadMessage }
+    li Prompt: #{ promptText }
+    p
       +with dereferenceUser this
         button.mark-as-read Mark As Read for #{ firstName }
   .actions
