Adding meteor roles package and start defining admins as different from normal users

--- a/client/splash/splash.jade
+++ b/client/splash/splash.jade
@@ -10,4 +10,4 @@ template(name='splash')
     .sea
       .ketchWrapper
         img.ketchIcon(src='/images/ketchIcon.png')
-      a.download(href="itms-services://?action=download-manifest&url=https://goo.gl/lVpv2w") Download Alpha
+      +loginButtons
