refactor device into its own separate collection.

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -87,7 +87,7 @@ template(name='userDetails')
     section.devices
       h2 Devices
       ul
-        +each devices
+        +each deviceDetails
           li Id: #{ _id }
           li Push Token: #{ pushToken }
           li APN Env: #{ apsEnv }
