add a hack to populate 200 active users at a time

--- a/client/user_candidates/user_candidates.jade
+++ b/client/user_candidates/user_candidates.jade
@@ -53,6 +53,7 @@ template(name='userCandidates')
 
     section.actions
       h2 Actions
+      button.populate-and-activate-queue Populate and Activate
       button.populate-queue Populate Candidate Queue
       button.clear-queue Clear Candidate Queue
 
