--- a/client/user_candidates/user_candidates.less
+++ b/client/user_candidates/user_candidates.less
@@ -40,6 +40,10 @@
   }
 }
 
+.populate-and-activate-queue {
+  background:#cc0000;
+}
+
 .add-logged-in-user-to-queue {
   background-color: #FFFF00;
 }
